// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render banner Banner renders correctly 1`] = `
<div
  class="vxteaser-banner vxteaser--has-skew -view1"
  data-testid="banner"
  style="height: 200px;"
>
  <img
    fetchpriority="auto"
    loading="lazy"
    src="test-url.jpg"
    style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0px;"
  />
  <div
    class="vxteaser-banner__content"
    data-testid="banner-content"
  >
    <div
      class="vxteaser-banner__content__inner"
    />
  </div>
</div>
`;

exports[`render banner banner content tablet 1`] = `
<div
  class="vxteaser-banner vxteaser--has-no-skew -view2"
  data-testid="banner"
  style="height: 500px;"
>
  <img
    fetchpriority="auto"
    loading="lazy"
    src="url1"
    style="width: 100%; height: 260px; object-fit: cover; position: absolute; top: 0px;"
  />
  <div
    class="vxteaser-banner__content"
    data-testid="banner-content"
    style="height: 250px; margin-top: 250px; text-align: center;"
  >
    <div
      class="vxteaser-banner__content__inner"
    />
  </div>
</div>
`;

exports[`render banner banner theme 1`] = `
<div
  class="vxteaser-banner vxteaser--has-skew -view1 -theme-white -view2--bg-auto"
  data-testid="banner"
  style="height: 260px;"
>
  <img
    fetchpriority="auto"
    loading="lazy"
    src="url0"
    style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0px;"
  />
  <div
    class="vxteaser-banner__content"
    data-testid="banner-content"
  >
    <div
      class="vxteaser-banner__content__inner"
    />
  </div>
</div>
`;

exports[`render banner empty banner 1`] = `null`;
